--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redux-app",
+  "name": "prueba-bot",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -18,8 +18,8 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@ngrx/devtools": "^1.4.0",
     "@ngrx/store": "^15.0.0",
-    "bootstrap": "^5.2.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
